--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1>Guess the Farzana game</h1>
+        <h1>Guess the Word game</h1>
     </header>
 
     <section>
